--- a/RazorPagesMovie/RazorPagesMovie.csproj
+++ b/RazorPagesMovie/RazorPagesMovie.csproj
@@ -17,4 +17,7 @@
   <ItemGroup>
     <Folder Include="Models\" />
   </ItemGroup>
+  <ItemGroup>
+    <None Remove="MvcMovie.db" />
+  </ItemGroup>
 </Project>
